Highlight in red if non-existent city

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
     <div class="cntr-innr">
       <label class="search" for="search_bar">
         <input id="search_bar" (keyup.enter)="searchCity($event)" type="text" />
+        <span id="test"></span>
       </label>
     </div>
   </div>
