--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,6 @@
     <div class="cntr-innr">
       <label class="search" for="search_bar">
         <input id="search_bar" (keyup.enter)="searchCity($event)" type="text" />
-        <span id="test"></span>
       </label>
     </div>
   </div>
@@ -20,5 +19,5 @@
       <h2 id="temperature-degree"></h2>
       <p id="temperature-unit"></p>
   </div>
-  <div id="temperature-condition">/div>
+  <div id="temperature-condition"></div>
 </div>
